2002-11-15  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.TdsClient.Internal/Tds.cs:
		Add support for UniqueIdentifier (GUID),
		Money types

2002-11-14  Tim Coleman <tim@timcoleman.com>
	* list:
	* Mono.Data.TdsClient/TdsType.cs:
		Add this class
	* Mono.Data.TdsClient/TdsDataReader.cs:
		Add GetSchemaTable implementation
	* Mono.Data.TdsClient.Internal/ITds.cs:
		Add RecordsAffected
	* Mono.Data.TdsClient.Internal/Tds.cs:
		Add RecordsAffected
		Fix handling of DateTime, decimal, and float types
	* Mono.Data.TdsClient.Internal/Tds42.cs:
	* Mono.Data.TdsClient.Internal/Tds50.cs:
	* Mono.Data.TdsClient.Internal/Tds70.cs:
	* Mono.Data.TdsClient.Internal/TdsPacketColumnInfoResult.cs:
	* Mono.Data.TdsClient.Internal/TdsSchemaInfo.cs:
		Change SchemaTable handling
	* Mono.Data.TdsClient.Internal/TdsPacketRowResult.cs:
		Add proper decimal handling

2002-11-13  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.TdsClient.Internal/Tds.cs:
		Fix GetStringValue, GetTextValue when handling NULL
		values.
	* Mono.Data.TdsClient.Internal/TdsComm.cs:
		Comment out asynchronous socket connect
		because it doesn't work properly yet on 
		Linux.

2002-11-12  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.TdsClient.Internal/TdsContext.cs:
		Remove this class as it is not being used
	* Mono.Data.TdsClient.Internal/ITds.cs
	* Mono.Data.TdsClient.Internal/Tds.cs
	* Mono.Data.TdsClient.Internal/Tds42.cs
	* Mono.Data.TdsClient.Internal/Tds50.cs
	* Mono.Data.TdsClient.Internal/Tds70.cs
	* Mono.Data.TdsClient.Internal/TdsPacketColumnInfoResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketColumnNamesResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketColumnOrderResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketControlResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketEndTokenResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketOutputParam.cs
	* Mono.Data.TdsClient.Internal/TdsPacketRetStatResult.cs
	* Mono.Data.TdsClient.Internal/TdsPacketRowResult.cs